--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -2,6 +2,7 @@ android {
     defaultConfig {
         minSdkVersion 22
         targetSdkVersion 25
+        compileSdkVersion 25
     }
 
    packagingOptions {
