--- a/src/android/AndroidNativePdfViewer.gradle
+++ b/src/android/AndroidNativePdfViewer.gradle
@@ -1,18 +1,20 @@
 repositories{    
-  jcenter()
-  flatDir {
-      dirs 'libs'
-   }
+  mavenCentral()
 }
 
 dependencies {
-    compile(name:'pdfviewer-library', ext:'aar')
-    compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
-    compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.android.support:design:27.+'
+    implementation (name:'pdfviewer-library', ext:'aar')
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.android.support:appcompat-v7:27.+'
+    implementation 'com.android.support:design:27.+'
 }
 
 android {
+  sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+  }
   packagingOptions {
     exclude 'META-INF/NOTICE'
     exclude 'META-INF/LICENSE'
